<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.StartFragment">

    <ImageView
        android:id="@+id/tata_logo"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/tata_logo"
        android:src="@drawable/tata_consultancy_services_logo_tcs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:fontFamily="sans-serif"
        android:textSize="48sp"
        android:textAlignment="center"
        android:text="@string/welcome_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/sign_in_button_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/about_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/about_button"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:text="@string/about_button_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/sign_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?attr/materialButtonOutlinedStyle"/>

    <Button
        android:id="@+id/contact_button"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_button_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/about_button"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?attr/materialButtonOutlinedStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>