<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HubFragment">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categories_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text">

        <TextView
            android:id="@+id/categories_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/categories_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/categories_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories_message"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/categories_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_hardcode"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/categories_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/blue"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/percentage"
            app:layout_constraintStart_toStartOf="@id/percentage"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/categories_presenter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories_presenter"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/categories_holder"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/urgent_category_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_presenter_text">

        <ImageView
            android:id="@+id/bell_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_notifications_24"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bell_icon_content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/urgent_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent_category_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/bell_icon"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/urgent_category_notif_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent_category_notification_text"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/urgent_category_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/orange"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/urgent_category_notif_text"
            app:layout_constraintStart_toStartOf="@id/urgent_category_notif_text"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/document_category_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urgent_category_holder">

        <ImageView
            android:id="@+id/file_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_insert_drive_file_24"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/file_icon_content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/document_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_category_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/file_icon"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/document_category_notif_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_category_notification_text"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/document_category_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/pink"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/document_category_notif_text"
            app:layout_constraintStart_toStartOf="@id/document_category_notif_text"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:text="@string/log_out_button_text"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@id/document_category_holder"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>