<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_field"
        app:srcCompat="@drawable/_625820626997"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/ic_email"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="@id/Logo"
        app:layout_constraintTop_toBottomOf="@id/Logo"
        app:layout_constraintEnd_toEndOf="@id/Logo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="@id/Logo"
        app:layout_constraintTop_toBottomOf="@id/email_field"
        app:layout_constraintEnd_toEndOf="@id/Logo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_button_text"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        app:layout_constraintStart_toStartOf="@id/password_field"
        app:layout_constraintEnd_toEndOf="@id/password_field"/>

</androidx.constraintlayout.widget.ConstraintLayout>